--- a/app/src/main/res/layout/activity_cpr.xml
+++ b/app/src/main/res/layout/activity_cpr.xml
@@ -79,7 +79,8 @@
                 app:tabMode="fixed"
                 app:tabSelectedTextColor="@color/gray600"
                 app:tabTextAppearance="@style/Body1"
-                app:tabTextColor="@color/gray400">
+                app:tabTextColor="@color/gray400"
+                app:tabIndicatorColor="@color/red">
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="30dp"
@@ -96,30 +97,22 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="0dp"
-        android:layout_marginTop="24dp"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintTop_toBottomOf="@id/cpr_appBar">
 
-        <LinearLayout
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/cpr_viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:layout_marginBottom="80dp"
-            android:orientation="vertical"
-            android:padding="0dp">
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/cpr_viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cpr_tabLayout" />
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
+            android:layout_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cpr_tabLayout" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
