--- a/app/src/main/res/layout/activity_setting_favorite.xml
+++ b/app/src/main/res/layout/activity_setting_favorite.xml
@@ -85,7 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.2"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="즐겨찾기 해놓은 아이템이 없습니다"
+        android:text="즐겨찾기 해놓은 장소가 없습니다"
         android:textColor="@color/gray400"
         android:textSize="16sp"
         android:visibility="gone"
