--- a/app/src/main/res/layout/fragment_favorite_shelter.xml
+++ b/app/src/main/res/layout/fragment_favorite_shelter.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_padding"
         android:layout_marginTop="@dimen/p_double_space"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/favoriteShelterRecyclerView"
@@ -30,7 +31,7 @@
             android:layout_height="wrap_content"
             android:text="@string/shelter"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
     </LinearLayout>
