--- a/app/src/main/res/layout/item_favorite_aed.xml
+++ b/app/src/main/res/layout/item_favorite_aed.xml
@@ -4,58 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@drawable/map_recyclerview_border"
-    android:padding="8dp">
+    android:layout_marginTop="16dp"
+    android:background="@drawable/map_recyclerview_border">
 
     <LinearLayout
         android:id="@+id/favoriteAedDetaillayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="94dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/favoriteAedBookmarkButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/favoriteAedDistanceTextView">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/favoriteAedPlaceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="공덕역"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/favoriteAedAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2km"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="11dp"
+            android:maxLines="1"
+            android:text="서울특별시 마포구 성산로"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/favorriteAedAddressDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:maxLines="1"
+            android:text="5층 로비"
+            android:textSize="14sp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/favoriteAedDistanceTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3분"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/favoriteAedDetaillayout"
-        app:layout_constraintEnd_toStartOf="@+id/favoriteAedBookmarkButton"
-        android:layout_marginHorizontal="10dp"
-        android:textColor="@color/black"
-        />
 
     <android.widget.Button
         android:id="@+id/favoriteAedBookmarkButton"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginHorizontal="10dp"
-        app:layout_constraintStart_toEndOf="@+id/favoriteAedDistanceTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/map_bookmark_on"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
