--- a/app/src/main/res/layout/item_favorite_shelter.xml
+++ b/app/src/main/res/layout/item_favorite_shelter.xml
@@ -4,58 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@drawable/map_recyclerview_border"
-    android:padding="8dp">
+    android:layout_marginVertical="16dp"
+    android:background="@drawable/map_recyclerview_border">
 
     <LinearLayout
         android:id="@+id/favoriteShelterDetaillayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="94dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/favoriteShelterDistanceTextView">
+        app:layout_constraintEnd_toStartOf="@+id/favoriteShelterBookmarkButton">
 
         <TextView
             android:id="@+id/favoriteShelterPlaceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="공덕역"
+            android:maxLines="1"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:textColor="@color/black" />
 
         <TextView
+            android:id="@+id/favoriteShelterAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2km"
-            android:layout_marginTop="10dp"/>
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:textColor="@color/gray500"
+            android:layout_marginTop="11dp"/>
+
+        <TextView
+            android:id="@+id/favoriteShelterAddressDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2km"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:textColor="@color/gray500"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/favoriteShelterDistanceTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3분"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/favoriteShelterDetaillayout"
-        app:layout_constraintEnd_toStartOf="@+id/favoriteShelterBookmarkButton"
-        android:layout_marginHorizontal="10dp"
-        android:textColor="@color/black"
-        />
 
     <android.widget.Button
         android:id="@+id/favoriteShelterBookmarkButton"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginHorizontal="10dp"
-        app:layout_constraintStart_toEndOf="@+id/favoriteShelterDistanceTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/map_bookmark_on"
-        />
+        android:background="@drawable/map_bookmark_on" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
