--- a/app/src/main/res/layout/list_contact.xml
+++ b/app/src/main/res/layout/list_contact.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="148dp"
+    android:layout_height="138dp"
     android:layout_margin="8dp"
-    android:elevation="10dp"
+    android:elevation="5dp"
     android:background="@drawable/setting_bg_con_custom">
 
     <Space
@@ -59,10 +59,17 @@
         android:id="@+id/con_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:textAppearance="@style/Head4"
         android:textColor="@color/gray400"
         app:layout_constraintStart_toEndOf="@id/con_vspace"
-        app:layout_constraintTop_toBottomOf="@id/con_name"/>
+        app:layout_constraintBottom_toTopOf="@id/con_bottom_space"/>
+
+    <Space
+        android:id="@+id/con_bottom_space"
+        android:layout_width="0dp"
+        android:layout_height="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
