--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -39,7 +39,15 @@ tools:context=".sos.AmbulanceActivity">
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-
+ <!--       <Spinner
+            android:id="@+id/amb_spinner"
+            android:layout_width="120dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toBottomOf="@id/amb_title"
+            app:layout_constraintEnd_toEndOf="parent" />
+-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
