--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -61,47 +61,103 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/sos_txt_select_num"
                 android:textColor="@color/gray600"
-                android:textFontWeight="900"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
+            <LinearLayout
                 android:id="@+id/btn_119"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:maxWidth="363dp"
                 android:layout_marginTop="25dp"
-                android:background="@drawable/sos_btn_119_custom"
-                android:contentDescription="@string/sos_btn_119"
+                android:background="@drawable/sos_btn_sms_to_119"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_select_num"
-                app:layout_constraintBottom_toTopOf="@id/btn_112"/>
+                app:layout_constraintBottom_toTopOf="@id/btn_112"
+                android:orientation="horizontal">
 
-            <ImageButton
+                <ImageView
+                    android:id="@+id/btn_119_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="9dp"
+                    android:src="@drawable/sos_btn_119" />
+
+                <TextView
+                    android:id="@+id/btn_119_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="119"
+                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/red"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/btn_112"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:maxWidth="363dp"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/sos_btn_112_custom"
-                android:contentDescription="@string/sos_btn_112"
+                android:background="@drawable/sos_btn_sms_to_112"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_119"
-                app:layout_constraintBottom_toTopOf="@id/btn_fav"/>
+                app:layout_constraintBottom_toTopOf="@id/btn_fav"
+                android:orientation="horizontal">
 
-            <ImageButton
+                <ImageView
+                    android:id="@+id/btn_112_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="9dp"
+                    android:src="@drawable/sos_btn_112" />
+
+                <TextView
+                    android:id="@+id/btn_112_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="112"
+                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/blue"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/btn_fav"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:maxWidth="363dp"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/sos_btn_fav_custom"
-                android:contentDescription="@string/sos_btn_fav"
+                android:background="@drawable/sos_btn_sms_to_fav"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_112"
-                app:layout_constraintBottom_toTopOf="@id/txt_sms_start" />
+                app:layout_constraintBottom_toTopOf="@id/txt_sms_start"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/btn_fav_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="9dp"
+                    android:src="@drawable/sos_btn_fav" />
+
+                <TextView
+                    android:id="@+id/btn_fav_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="비상연락처"
+                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/gray600"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/txt_sms_start"
@@ -122,11 +178,14 @@
 
             <ImageView
                 android:id="@+id/img_sms_guide"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxWidth="353dp"
                 android:layout_marginTop="17dp"
+                android:layout_marginStart="10dp"
                 android:contentDescription="@string/sos_img_sms"
-                android:background="@drawable/sos_img_sms_ex"
+                android:src="@drawable/sos_img_sms_ex"
+                android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_sms_start"
@@ -136,7 +195,7 @@
                 android:id="@+id/txt_sms"
                 android:layout_width="210dp"
                 android:layout_height="75dp"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:gravity="start"
                 android:textColor="#1B6DB1"
@@ -160,21 +219,35 @@
                 app:layout_constraintTop_toBottomOf="@+id/img_sms_guide"
                 app:layout_constraintBottom_toTopOf="@id/btn_amb"/>
 
-            <ImageButton
+            <LinearLayout
                 android:id="@+id/btn_amb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="51dp"
                 android:layout_marginTop="9dp"
-                android:background="@drawable/sos_btn_amb_num"
-                android:contentDescription="@string/sos_btn_amb"
+                android:maxWidth="363dp"
+                android:gravity="center"
+                android:background="@drawable/sos_btn_sms_to_fav"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_amb"
-                app:layout_constraintBottom_toTopOf="@id/space_btm"/>
+                app:layout_constraintBottom_toTopOf="@id/space_btm"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/sos_btn_amb"
+                    android:layout_marginEnd="5dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sos_btn_amb"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <Space
                 android:id="@+id/space_btm"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,5 +255,4 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
