--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -30,7 +30,7 @@
             android:lines="1"
             android:text="서울특별시"
             android:textColor="@color/black"
-            app:drawableStartCompat="@drawable/sos_img_sos_gps" />
+            app:drawableStartCompat="@drawable/map_navigation_arrow" />
 
     </LinearLayout>
 
@@ -173,18 +173,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_fav"
-                app:layout_constraintBottom_toTopOf="@id/img_sms_guide"
+                app:layout_constraintBottom_toTopOf="@id/img_sms_bubble"
                 app:drawableStartCompat="@drawable/sos_img_sms" />
 
             <ImageView
-                android:id="@+id/img_sms_guide"
+                android:id="@+id/img_sms_bubble"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxWidth="353dp"
+                android:maxWidth="289dp"
                 android:layout_marginTop="17dp"
                 android:layout_marginStart="10dp"
                 android:contentDescription="@string/sos_img_sms"
-                android:src="@drawable/sos_img_sms_ex"
+                android:src="@drawable/sos_img_sms_bubble"
                 android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -193,16 +193,16 @@
 
             <TextView
                 android:id="@+id/txt_sms"
-                android:layout_width="210dp"
-                android:layout_height="75dp"
+                android:layout_width="215dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:gravity="start"
                 android:textColor="#1B6DB1"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@id/img_sms_guide"
-                app:layout_constraintTop_toTopOf="@id/img_sms_guide"
-                app:layout_constraintBottom_toBottomOf="@id/img_sms_guide"/>
+                app:layout_constraintStart_toStartOf="@id/img_sms_bubble"
+                app:layout_constraintTop_toTopOf="@id/img_sms_bubble"
+                app:layout_constraintBottom_toBottomOf="@id/img_sms_bubble"/>
 
             <TextView
                 android:id="@+id/txt_amb"
@@ -216,7 +216,7 @@
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_sms_guide"
+                app:layout_constraintTop_toBottomOf="@+id/img_sms_bubble"
                 app:layout_constraintBottom_toTopOf="@id/btn_amb"/>
 
             <LinearLayout
