modify layout for amb page

--- a/app/src/main/res/drawable/sos_btn_tel.xml
+++ b/app/src/main/res/drawable/sos_btn_tel.xml
@@ -1,18 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
-  <path
-      android:strokeWidth="1"
-      android:pathData="M24,24m-23.5,0a23.5,23.5 0,1 1,47 0a23.5,23.5 0,1 1,-47 0"
-      android:fillColor="#ffffff"
-      android:strokeColor="#D5D5D5"/>
-  <path
-      android:pathData="M20.0309,24.1877C20.8413,25.8445 22.1842,27.1813 23.8447,27.9842C23.9662,28.0417 24.1006,28.0667 24.2346,28.0565C24.3687,28.0464 24.4978,28.0015 24.6092,27.9263L27.0541,26.296C27.1622,26.2239 27.2866,26.1799 27.4161,26.168C27.5455,26.1562 27.6758,26.1767 27.7953,26.2279L32.3692,28.1882C32.5246,28.2542 32.6543,28.3689 32.7388,28.515C32.8233,28.6612 32.8581,28.8308 32.8378,28.9984C32.6932,30.1297 32.1413,31.1694 31.2853,31.923C30.4293,32.6766 29.328,33.0924 28.1875,33.0925C24.6651,33.0925 21.287,31.6932 18.7962,29.2025C16.3055,26.7118 14.9062,23.3336 14.9062,19.8112C14.9063,18.6708 15.3221,17.5694 16.0757,16.7134C16.8293,15.8574 17.869,15.3055 19.0003,15.1609C19.1679,15.1406 19.3375,15.1754 19.4837,15.2599C19.6298,15.3444 19.7445,15.4741 19.8105,15.6295L21.7725,20.2074C21.8232,20.3258 21.8439,20.4549 21.8327,20.5833C21.8214,20.7116 21.7786,20.8352 21.7081,20.943L20.0834,23.4254C20.0095,23.537 19.9658,23.666 19.9566,23.7996C19.9474,23.9332 19.973,24.0669 20.0309,24.1877V24.1877Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.0625"
-      android:fillColor="#00000000"
-      android:strokeColor="#606060"
-      android:strokeLineCap="round"/>
-</vector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
+    <stroke android:width="1dp"
+        android:color="@color/gray200" />
+    <corners android:radius="90dp" />
+</shape>
