--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -10,7 +10,7 @@ tools:context=".sos.AmbulanceActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/amb_top"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="130dp"
         android:background="@drawable/sos_bg_amb"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@ tools:context=".sos.AmbulanceActivity">
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
- <!--       <Spinner
+        <Spinner
             android:id="@+id/amb_spinner"
             android:layout_width="120dp"
             android:layout_height="39dp"
@@ -47,7 +47,6 @@ tools:context=".sos.AmbulanceActivity">
             android:layout_marginEnd="24dp"
             app:layout_constraintTop_toBottomOf="@id/amb_title"
             app:layout_constraintEnd_toEndOf="parent" />
--->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -70,7 +69,7 @@ tools:context=".sos.AmbulanceActivity">
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/sos_amb_notice"
         android:textSize="14sp"
         android:textAppearance="@style/Body2"
